# csgo-inv-shuffle-web

./: .eslintrc.json  .gitignore  .pre-commit-config.yaml  CNAME  COPYRIGHT  LICENSE  Procfile  README.md  app.py  fabfile.py  package-lock.json  package.json  poetry.toml  pyproject.toml  requirements.txt  setup_dev.sh
.github/: dependabot.yml
.github/workflows/: deployment.yml  main.yml
bootstrap/: package-lock.json  package.json
csgo-inv-shuffle-web/: flaskapp.py
csgoinvshuffleweb/: config.py  flaskapp.py  utils.py  wsgi.py
csgoinvshuffleweb/extensions/: __init__.py  auth.py  cache.py  validation.py
csgoinvshuffleweb/routes/: __init__.py  auth.py  config.py  profile_data.py
react/: .yarnrc.yml  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
react/.yarn/: .gitignore
react/public/: csgo_saved_item_shuffles.txt  index.html  robots.txt  sitemap.xml
react/public/markdown/: howto.md  privacy.md
react/src/: config.ts  index.css  index.scss  index.tsx  redux.ts  redux_hooks.ts
react/src/components/: Auth.tsx  Content.tsx  HowTo.tsx  Inventory.tsx  Item.tsx  Logout.tsx  Privacy.tsx  Shell.tsx  SlotMap.tsx  User.tsx  auth.tsx  content.tsx  footer.tsx  header.tsx  howto.tsx  inventory.tsx  item.tsx  logout.tsx  privacy.tsx  shell.tsx  slotmap.tsx  user.tsx
react/src/css/: header.css
react/src/redux/: auth.ts  inv.ts  map.ts
react/src/scss/: content.scss  footer.scss  header.scss  slot.scss  user.scss
react/src/slices/: inv.ts  map.ts
react/src/utils/: api_requests.ts  auth.ts  inventory.ts  misc.ts  slotmap.ts
resources/: icon.xcf
tests/: conftest.py  test_utils.py
tests/data/: map.json
tests/test_routes/: test_auth.py  test_config.py  test_profile.py
