[tool.poetry]
name = "csgoinvshuffleweb"
version = "0.1.0"
description = "csgoinvshuffleweb"
authors = ["Jan Vollmer <zunder325@gmail.com>"]
license = "All Rights reserved"

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.0.1"
csgoinvshuffle = "^1.3.6"
requests = "^2.27.0"
flask-praetorian = "^1.3.0"
Flask-Cors = "^3.0.10"
Flask-Caching = "^1.10.1"
redis = "^4.1.1"
spectree="^0.7.1 || ^0.9.0"
gunicorn = "^20.1.0"





[tool.poetry.dev-dependencies]
black = {version = "^21.12b0", allow-prereleases = true}
flake8 = "^4.0"
pytest="^6.2.5"
pytest-flask="^1.2.0"
pre-commit="^2.16.0"
pytest-cov="^3.0"
coverage = "^6.2"
setuptools = "^60.5.0 || ^62.0.0"
poetry = "^1.1.12"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile="black"




[tool.pytest.ini_options]
testpaths = ["tests"]
