[tool.poetry]
name = "csgoinvshuffleweb"
version = "0.1.0"
description = "csgoinvshuffleweb"
authors = ["Jan Vollmer <jan@vllmr.dev>"]
license = "All Rights reserved"

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.0.1"
csgoinvshuffle = "^1.3.6"
requests = "^2.27.0"
flask-praetorian = "^1.3.0"
Flask-Cors = "^3.0.10"
Flask-Caching = "^2.0.0"
redis = "^4.1.1 || ^5.0.0"
spectree = "^1.0.0"
gunicorn = "^20.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-flask = "^1.2.0"
pre-commit = "^3.0.0"
pytest-cov = "^4.0.0"
poetry = "^1.2"
black = "^22.12.0 || ^23.0.0"
flake8 = "^6.0.0"
flake8-pyproject = "^1.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.flake8]
extend-ignore = ["W503"]
max-line-length = 90

[tool.pyaphid]
forbidden = ["print"]

[tool.pytest.ini_options]
testpaths = ["tests"]
